--- a/styles/partials/regions/_sidebar.scss
+++ b/styles/partials/regions/_sidebar.scss
@@ -22,6 +22,7 @@ aside{
       width: 80%;
       text-align: center;
       filter: grayscale(100%);
+      backface-visibility: hidden;
       @include shadow-small();
       @include rem('border-radius', 1.5rem);
       @include rem('margin-top', 1.5rem);
@@ -61,7 +62,7 @@ aside{
     &.small{
       float:left;
       width:85%;
-      
+
     }
   }
 
